test/Fail/Issue6643.err
Issue6643.agda:12.13-14: warning: -W[no]RewriteBeforeMutualFunctionDefinition
Rewrite rule from function  p  cannot be added before the definition of mutually defined q
when checking the pragma REWRITE p

Issue6643.agda:14.5-9: error: [UnequalTerms]
true != false of type Bool
when checking that the expression refl has type true ≡ false
